<resources>
    <string name="app_name">Wykopółka</string>
    <string name="title_activity_sign_in">Logowanie</string>
    <string name="title_activity_added_books">Oddane książki</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="btn_edit_desc_text">edytuj opis książki</string>
    <string name="btn_load_pfd_text">wyświetl pdf karty książki</string>
    <string name="added_by">Dodane przez:</string>
    <string name="owned_by">Aktualnie w rękach:</string>
    <string name="genre">Gatunek</string>
    <string name="description">Opis</string>
    <string name="book_description">Opis książki</string>
    <string name="author">Autor</string>
    <string name="search_hint">Tytuł, autor, gatunek...</string>
    <string name="message_added_to_wish_list">Dodano książkę na listę życzeń!</string>
    <string name="action_go_to_wishlist">Przejdź do listy życzeń</string>
    <string name="message_stat_read_books">Przeczytanych książek</string>
    <string name="message_stat_on_wish_list">Książek na liście życzeń</string>
    <string name="message_stat_added_books">Oddanych książek</string>
    <string name="transition_book_cover">book_cover</string>
    <string name="transition_gradient">gradient</string>
    <string name="title_activity_book_panel">Panel książek</string>
    <string name="tab_title_my_books">moje książki</string>
    <string name="tab_title_added_books">oddane książki</string>
    <string name="title_activity_faq">Najczęściej zadawane pytania</string>
    <string name="title_activity_welcome">Witaj</string>
    <string name="faq">FAQ</string>
    <string name="faq_most_asked_questions">Najcześciej zadawane pytania</string>
    <string name="faq_back">powrót</string>
    <string name="welcome_about_header">#wykopółka</string>
    <string name="welcome_about_header2">Czytaj ciekawe tytuły za darmo!</string>
    <string name="welcome_about_content_text2">Dzięki Wykopółce masz dostęp do setek książek udostępnionych przez społeczność Wykop.pl. Jednak aby skorzystać z naszej biblioteczki musisz być częścią tej społeczności.</string>
    <string name="welcome_about_content_text">Dzięki Wykopółce masz dostęp do setek książek udostępnionych przez społeczność Wykop.pl. \n\n \"Kto czyta książki, żyje podwójnie\"\n ~Umberto Eco</string>
    <string name="welcome_how_button_text">zobacz faq</string>
    <string name="welcome_how_content">Użytkownicy Wykopu oddają książki na Wykopółkę. Kolejny wykopowicz dodaje upatrzoną książkę na listę życzeń. Jeśli książka jest wolna, aktualny posiadacz przesyła ją chętnemu na swój koszt. Po przeczytaniu, czytelnik przesyła książkę kolejnemu chętnemu.</string>
    <string name="welcome_how_header">Jak to działa?</string>
    <string name="welcome_login_via_header">Logowanie</string>
    <string name="welcome_login_via_content">Aby skorzystać z naszej biblioteczki musisz być częścią społeczności Wykopu. Zaloguj się używając swojego wykopowego konta.</string>
    <string name="welcome_login_via_button_text">zaloguj przez wykop</string>
    <string name="title_activity_random_book">Losuj książkę</string>
    <string name="random_book_action">Losuję książkę...</string>
    <string name="random_book_action_button">losuj dalej</string>
    <string name="title_activity_profile_settings">Ustawienia profilu</string>
    <string name="settings_header_address">Adres wysyłki</string>
    <string name="settings_header_notifications">Powiadomienia</string>
    <string name="settings_header_account">Konto</string>
    <string name="settings_btn_action_logout">wyloguj</string>
    <string name="settings_option_notification_pw_wykop">Powiadomienia na PW Wykopu</string>
    <string name="settings_option_notification_email">Powiadomienia e-mail</string>
    <string name="settings_btn_action_save">zapisz</string>
    <string name="settings_address_about">Nie musisz uzupełniać swoich danych jeśli tego nie chcesz. W takim przypadku, użytkownik chcący wysłać Ci książkę zostanie przekierowany do prywatnej rozmowy z Tobą na Wykopie.</string>
    <string name="settings_et_hint_fullname">Imię i nazwisko</string>
    <string name="settings_et_hint_address">Ulica, nr domu</string>
    <string name="settings_et_hint_postal_code">Kod pocztowy</string>
    <string name="settings_et_hint_city">Miejscowość</string>
    <string name="tab_title_statistic">Statystyki</string>
    <string name="tab_title_ranking">Ranking</string>
    <string name="title_activity_stats_and_top_users">Statystki</string>
    <string name="button_name">aaa</string>
    <string name="stats_books_count">Tyle mamy książek na Wykopółce!</string>
    <string name="stats_active_users">Tylu mamy aktywnych czytelników</string>
    <string name="stats_changed_own">Tyle razy książka zmieniła właściciela</string>
    <string name="stats_wish_list">Tyle tytułów użytkownicy mają na liście życzeń</string>
    <string name="stats_average_readed_books">Średnia ilość przeczytanych książek</string>
    <string name="number_null">0</string>
    <string name="loading_message">Wczytywanie...</string>
    <string name="btn_action_retry">Ponów próbę</string>
    <string name="error_message">Oops, coś poszło nie tak.</string>
    <string name="selected_books_null">Brak dostępnych typów</string>
    <string name="added_books_null">Nie dodałeś jeszcze żadnej książki</string>
    <string name="my_books_null">Nie posiadasz żadnych książek</string>
    <string name="tab_title_recommended">polecane</string>
    <string name="tab_title_waiting">oczekujący</string>
    <string name="tab_title_wishlist">lista życzeń</string>
    <string name="title_activity_search">Szukaj książki</string>
    <string name="search_message_by_genre">Książki znalezione po gatunkach</string>
    <string name="search_message_by_author">Książki znalezione po autorze</string>
    <string name="search_message_by_title">Książki znalezione po tytule</string>
    <string name="search_message_failed">Brak wyników</string>
    <string name="title_activity_add_book">Oddaj książkę</string>
    <string name="title_activity_edit_book">Edytuj książkę</string>
    <string name="btn_message_take_photo">Zrób zdjęcie okładki</string>
    <string name="book_title">Tytuł</string>
    <string name="isbn_number">Number ISBN</string>
    <string name="book_rating">Ocena książki</string>
    <string name="book_quality">Stan książki</string>
    <string name="error_camera_unavailable">Aparat jest niedostępny</string>
    <string name="error_camer_while_taking_photo">Błąd podczas robienia zdjęcia</string>
    <string name="error_message_default">Coś poszło nie tak</string>
    <string name="error_edit_text_desc_empty">Uzupełnij opis</string>
    <string name="error_edit_text_genre_empty">Uzupełnij gatunek</string>
    <string name="error_edit_text_isbn_empty">Uzupełnij numer ISBN</string>
    <string name="error_edit_text_author_empty">Uzupełnij autora</string>
    <string name="error_edit_text_title_empty">Uzupełnij tytuł</string>
    <string name="loading_save_message">Wysyłanie książki</string>
    <string name="title_activity_all_books">Wszystkie książki</string>
    <string name="message_removed_from_wish_list">Książka usunięta z listy życzeń</string>
    <string name="message_wish_list_error">Napotkano błąd</string>
    <string name="message_in_query">W kolejce</string>
    <string name="button_confirm_claim">potwierdź odbiór</string>
    <string name="dialog_message_rate_quality">Poświęć chwilę na ocenę stanu książki, którą otrzymałeś.</string>
    <string name="dialog_button_confirm">potwierdź</string>
    <string name="wish_list_empty">Nie masz żadnej książki na liście życzeń</string>
    <string name="transfers_list_empty">Twoja lista oczekujących jest pusta</string>
    <string name="dialog_transfer_book_title">Przekaż książkę</string>
    <string name="button_confirm_transfer">przekaż książkę</string>
    <string name="dialog_about_card">Karta książki powinna zostać wydrukowana lub napisana ręcznie na kartce po węwnętrznej stronie okładki</string>
    <string name="dialog_card_book_id">Numer ksiązki:</string>
    <string name="dialog_card_book_title">Tytuł:</string>
    <string name="dialog_card_book_author">Autor:</string>
    <string name="dialog_card_book_genre">Gatunek:</string>
    <string name="dialog_card_book_url">Link:</string>
    <string name="dialog_card_book_button_dismiss">zamknij</string>
    <string name="faq_content">
        <big><b>1. Czym jest Wykopółka?\n\n</b></big>Wykopółka to serwis book-crossingowy dla użytkowników Wykop.pl. Dzięki niej możesz wymieniać się książkami z innymi użytkownikami serwisu.\n\n
<big><b>2. Czy muszę mieć konto na Wykopie żeby korzystać Wykopółki?\n\n</b></big>Tak - konta na Wykopółce są ściśle powiązane z kontami na Wykopie. Nie możesz korzystać z serwisu nie mając tam konta, będąc zbanowanym lub nowym użytkownikiem.\n\n
<big><b>3. Po jakim czasie od założenia konta będę mógł korzystać z serwisu?\n\n</b></big>Część funkcjonalności Wykopółki będzie zablokowana dla nowych kont (zielonek na Wykopie). Żeby móc w pełni używać serwisu musisz odczekać miesiąc lub oddać i przekazać minimum 1 książkę na Wykopółce.\n\n
<big><b>4. Ile to kosztuje?\n\n</b></big>Korzystanie z Wykopółki kosztuje tyle co wysyłka książki. Inwestycja zwróci się kiedy tylko otrzymasz książkę ze swojej listy życzeń.\n\n
<big><b>5. Kto widzi moje dane?\n\n</b></big>Jeśli uzupełnisz swoje dane w profilu, nadawca Twojej książki będzie je widział tylko na czas przekazania książki. Straci do nich dostęp zaraz po potwierdzeniu przez Ciebie odbioru. Uzupełnienie tych danych nie jest jednak obowiązkowe, w sytuacji kiedy ich nie podasz Twój odbiorca będzie mógł zapytać o nie w wiadomości prywatnej na Wykopie.\n\n
<big><b>6. Ile książek mogę wypożyczyć?\n\n</b></big>Możesz jednocześnie posiadać do 3 książek wypożyczonych od innych użytkowników. Wyjątkiem są książki dodane przez Ciebie i jeszcze nie przekazane dalej.\n\n
<big><b>7. Czy mogę zwiększyć ilość slotów na książki?\n\n</b></big>Planujemy wprowadzić osiągnięcie, które po oddaniu określonej ilości książek pozwoli na wypożyczanie 4 lub 5 pozycji w tej samej chwili.\n\n
<big><b>8. Jak długo mogę trzymać książkę?\n\n</b></big>Najlepiej jak najkrócej. W kolejce zapewne czeka sporo osób, jednak nie ograniczamy czasu trzymania książki.\n\n
<big><b>9. Od czego zależy moja pozycja w kolejce po książkę?\n\n</b></big>Najważniejsza jest oczywiście data dodania pozycji na listę życzeń. W pierwszej kolejności książkę otrzymują osoby, które dodały ją jako pierwsze. Oczywiście na listę życzeń mają wpływ również inne czynniki. System na podstawie ocen książki przez odbierających użytkowników sprawdza komu często zdarza się niszczyć książki lub zalegać z wysyłką. Takie osoby będa spadały w kolejce niżej. Znów osoby oddające sporo książek na Wykopółkę mogą liczyć na podniesienie ich pozycji w kolejce.\n\n
<big><b>10. Czy mogę odzyskać oddaną książkę?\n\n</b></big>Tak - Opcja wypożyczenia czasowego daje możliwość szybkiego odzyskania swojej książki. Ma to zastosowanie szczególnie w przypadku książek technicznych, do których często wracamy. Jeśli opcja ta jest zaznaczona, osoba dodająca książkę na Wykopółkę po dodaniu swojej pozycji na wishlistę pojawi się jako pierwsza w kolejce do otrzymania książki. Nadal będzie musiała poczekać aż aktualny posiadacz ukończy czytanie, ale otrzyma możliwość zwrotu książki poza kolejką.\n\n
<big><b>11. Skąd pewność, że oddam pożyczoną książkę?\n\n</b></big>Znikąd. System stara się jak najdokładniej odsiewać osoby, które niszczą lub zalegają z książkami, jednak wszystko ciągle opiera się na zaufaniu. Wykopółka powstała w odpowiedzi na książki, które po trafieniu w #rozdajo już nigdy nie wracały w mirkowy obieg. Jeśli uda się puścić dalej choć część z tych książek to obwieścimy sukces. ;)
    </string>
</resources>