<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/DialogCardContentStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dialog_about_card"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginTop="@dimen/def_margin"
        android:background="#50000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/DialogCardHeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_card_book_id"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_book_id"
            style="@style/DialogCardContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/DialogCardHeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_card_book_title"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_book_title"
            style="@style/DialogCardContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/DialogCardHeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_card_book_author"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_book_author"
            style="@style/DialogCardContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/DialogCardHeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_card_book_genre"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_book_genre"
            style="@style/DialogCardContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.25dp"
        android:layout_marginTop="@dimen/def_margin"
        android:background="#50000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/DialogCardHeaderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_card_book_url"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_book_url"
            style="@style/DialogCardContentStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_dismiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/def_margin"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginStart="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:text="@string/dialog_card_book_button_dismiss"/>

</LinearLayout>