<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_added_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="@dimen/def_margin"
        android:layout_marginRight="@dimen/def_margin"
        android:layout_marginTop="@dimen/def_margin"
        android:elevation="2dp">

        <RelativeLayout
            android:id="@+id/rl_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_book_thumbnail"
                android:layout_width="@dimen/book_thumbnail_width"
                android:layout_height="@dimen/book_thumbnail_height"
                android:layout_margin="@dimen/def_margin"
                android:scaleType="fitXY"
                android:transitionName="@string/transition_book_cover"/>

            <ImageView
                android:id="@+id/gradient"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/iv_book_thumbnail"
                android:layout_alignEnd="@+id/iv_book_thumbnail"
                android:layout_alignStart="@+id/iv_book_thumbnail"
                android:transitionName="@string/transition_gradient"/>

            <TextView
                android:id="@+id/tv_book_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/iv_book_thumbnail"
                android:layout_marginEnd="@dimen/corner_margin"
                android:layout_toEndOf="@+id/iv_book_thumbnail"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tv_in_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_book_thumbnail"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_toEndOf="@id/iv_book_thumbnail"
                android:gravity="end"
                android:text="@string/message_in_query"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_confirm_receipt"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_book_thumbnail"
                android:layout_marginEnd="@dimen/def_margin"
                android:layout_toEndOf="@id/iv_book_thumbnail"
                android:text="@string/button_confirm_claim"
                android:theme="@style/Confirm.Button"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>