<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome_background_about">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/kv_img"
            android:layout_marginStart="16dp"
            app:srcCompat="@drawable/ic_action_navigation_arrow_back_inverted" />

        <ImageView
            android:id="@+id/kv_img"
            android:layout_width="wrap_content"
            android:layout_height="92dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/kv_img" />

        <TextView
            android:id="@+id/faq_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/kv_img"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/faq"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/faq_text_h2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faq_text"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/faq_most_asked_questions"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/faq_text_h2"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/faq_content"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/btn_back_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/content_text"
            android:layout_below="@id/content_text"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/ic_action_navigation_arrow_back_inverted" />

        <TextView
            android:id="@+id/faq_text_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_back_bottom"
            android:layout_alignTop="@id/btn_back_bottom"
            android:layout_toEndOf="@+id/btn_back_bottom"
            android:gravity="center_vertical"
            android:text="@string/faq_back"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

</ScrollView>

